Init commit. Clientside service to pull subreddit posts.

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+body {
+  width: 50%;
+  margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ul {
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h5 {
+  margin: 0;
+  padding: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.reddit-post {
+  border: 3px solid black;
+  margin-bottom: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.comment-section {
+  border: 1px solid black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li {
+  list-style: none;
+  border-bottom: 1px solid red;
+}
+
+li:nth-child(odd){
+  background-color: gray;;
+}
+
+li:last-child {
+  border-bottom: none;
+}
+
+.no-comments {
+  height: 30px;
+  display: block;
+}
+
+.no-comments::before {
+  content: "No comments yet";
 }
